--- a/roles/postgres/templates/keepalived.conf.j2
+++ b/roles/postgres/templates/keepalived.conf.j2
@@ -1,11 +1,11 @@
 # this file is managed by ansible, resistance is futile
 
-vrrp_track_process track_nginx {
-    process nginx
+vrrp_track_process track_postgres {
+    process postmaster
     delay 1
 }
 
-vrrp_instance NGINX {
+vrrp_instance POSTGRESQL {
     state {{ keepalived.state }}
     interface {{ keepalived.interface }}
     virtual_router_id {{ keepalived.virtual_router_id }}
@@ -22,6 +22,6 @@ vrrp_instance NGINX {
     }
 
     track_process {
-        track_nginx
+        track_postgres
     }
 }
