(patroni) get it in working state
Does need some more testing

--- a/roles/common/templates/sshd_config.j2
+++ b/roles/common/templates/sshd_config.j2
@@ -10,7 +10,7 @@ AuthorizedKeysFile	.ssh/authorized_keys
 # To disable tunneled clear text passwords, change to no here!
 #PasswordAuthentication yes
 #PermitEmptyPasswords no
-PermitRootLogin yes
+PermitRootLogin prohibit-password
 
 # show banner
 Banner /etc/ssh/banner
