--- a/roles/postgres/templates/keepalived.conf.j2
+++ b/roles/postgres/templates/keepalived.conf.j2
@@ -1,7 +1,7 @@
 # this file is managed by ansible, resistance is futile
 
 vrrp_track_process track_postgres {
-    process postmaster
+    process postgres
     delay 1
 }
 
