--- a/roles/postgres/templates/get-node-role.sh.j2
+++ b/roles/postgres/templates/get-node-role.sh.j2
@@ -1,3 +1,4 @@
 #! /usr/bin/env bash
+set -euo pipefail
 
 patronictl -c /etc/patroni/patroni.yml list -f json | jq '.[] | select(.Member | contains("{{ ansible_hostname }}"))'
